--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   flutter_custom_clippers: ^1.1.0
   percent_indicator: ^2.1.5
 
+
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
@@ -51,6 +52,8 @@ flutter:
    - assets/images/eye.png
    - assets/images/water-tank.png
    - assets/images/user.jpg
+   - assets/images/tank.png
+   
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
