--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,9 @@ dependencies:
   device_preview: ^0.2.6
   flutter_custom_clippers: ^1.1.0
   percent_indicator: ^2.1.5
+  shared_preferences: ^0.5.8
+  flutter_spinkit: "^4.1.2"
+
 
 
   # The following adds the Cupertino Icons font to your application.
