--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   shared_preferences: ^0.5.8
   flutter_spinkit: "^4.1.2"
   geolocator: ^5.3.2+2
+  bezier_chart: ^1.0.17+1
 
 
 
@@ -58,6 +59,7 @@ flutter:
    - assets/images/user.jpg
    - assets/images/tank.png
    - assets/images/donation.png
+   - assets/images/mail.png
    
 
   # An image asset can refer to one or more resolution-specific "variants", see
