--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,7 +39,13 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  flutter_launcher_icons: ^0.7.5
 
+flutter_icons:
+  android: true
+  ios: true 
+  image_path: "assets/images/empwicon.png"
+  
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -55,11 +61,14 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
    - assets/images/eye.png
+   - assets/images/empwicon.png
    - assets/images/water-tank.png
    - assets/images/user.jpg
    - assets/images/tank.png
    - assets/images/donation.png
    - assets/images/mail.png
+   - assets/images/humidifier.png
+   - assets/images/water.png
    
 
   # An image asset can refer to one or more resolution-specific "variants", see
